--- a/src/style.css
+++ b/src/style.css
@@ -28,11 +28,17 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #535bf2;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: #ff5cad;
+}
+
+p {
+  color:aqua;
 }
 
 button {
@@ -43,6 +49,7 @@ button {
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
+  color:white;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -65,6 +72,11 @@ button:focus-visible {
   text-align: center;
 }
 
+#login-form{
+  max-width: 960px;
+  text-align: center;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
@@ -75,5 +87,6 @@ button:focus-visible {
   }
   button {
     background-color: #f9f9f9;
+    color:#1a1a1a
   }
 }
